Fixing drag and drop flicker on chrome

--- a/BloodstarClockticaWeb/bloodstarclocktica/src/styles/dragdrop.css
+++ b/BloodstarClockticaWeb/bloodstarclocktica/src/styles/dragdrop.css
@@ -9,8 +9,10 @@ li[draggable="true"]::before{
     position: absolute;
     left:0;
     right:0;
-    top:3px;
+    top:-3px;
     height:0px;
+    pointer-events: none;
+    z-index:1;
 }
 li[draggable="true"]::after{
     content: '';
@@ -18,17 +20,19 @@ li[draggable="true"]::after{
     position: absolute;
     left:0;
     right:0;
-    bottom:3px;
+    bottom:-3px;
     height:0px;
+    pointer-events: none;
+    z-index:1;
 }
 .dragging {
     opacity: 0.35;
 }
 .dropBefore {
-    padding-top: 12px;
+    border-top: 12px solid #3977FF;
 }
 .dropAfter {
-    padding-bottom: 12px;
+    border-bottom: 12px solid #3977FF;
 }
 .dropBefore::before {
     height:6px !important;
